# ai-homepage-generator

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-app.yml
compose/: docker-compose.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
src/clients/: groq.rs
src/domain/: page.rs
src/services/: generator.rs  housekeeping.rs  rate_limit.rs  storage.rs
src/web/: handlers.rs  router.rs  utils.rs
