[package]
name = "ai-based-website"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
groq-api-rust = "0.2.51"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
html-escape = "0.2"
rand = "0.9.2"
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }